<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/wannago_bone"
        app:layout_constraintBottom_toTopOf="@+id/user_name_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/user_hint"
        app:layout_constraintBottom_toTopOf="@+id/pwd_text_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="373dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwd_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:hint="@string/pwd_hint"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:inputType="textWebPassword"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="10dp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="424dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_txt"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorAccent"
        android:text="@string/register_txt"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo" />

    <View
        android:id="@+id/divider"
        android:layout_width="325dp"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorAccentLight"
        app:layout_constraintBottom_toTopOf="@+id/user_name_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="0.528" />

    <View
        android:id="@+id/divider2"
        android:layout_width="325dp"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorAccentLight"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd_text_input_layout" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/version_txt"
        android:textColor="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>